--- a/src/components/leftSide/Persons.css
+++ b/src/components/leftSide/Persons.css
@@ -11,7 +11,7 @@
   gap: 1.5rem;
   flex: 1 0 0;
   border-radius: 6.25rem;
-  background: #FAFCFF;
+  /* background: #FAFCFF; */
 }
 
 .person > div span {
